# datilia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  LICENSE  NOTICE  README.md  TODO.md  config.py  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
ai/: chart_selector.py  claim_extractor.py  llm_client.py  mcp_client.py  prompts.py  tool_loop.py
api/: admin.py  datawrapper.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
chequeado_contextualizer/: asgi.py  settings.py  urls.py  wsgi.py
pipeline/: chart_builder.py  chart_spec.py  claim_set.py  contextualize.py  data_context.py
static/: contextualize-text.html  docs.html  history.html  openapi.json  run.html  sandbox.html
